--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>دستیار مالی سفرهای خارجی</title>
+    <title>دستیار مالی</br>سفرهــــــای خارجی</title>
     <!-- PWA Basic Metadata (Necessary for home screen shortcut) -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="دستیار سفر">
-    <link rel="apple-touch-icon" href="https://placehold.co/192x192/007AFF/FFFFFF?text=✈️">
+    <link rel="apple-touch-icon" href="https://placehold.co/192x192/007AFF/FFFFFF?text=🧳">
     <!-- Note: A manifest link is ideally needed, but cannot be a separate file here. We rely on meta tags and JS prompt. -->
 
     <!-- Load Tailwind CSS -->
