--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             'ترکیه': { code: 'TRY', symbol: '₺', flag: '🇹🇷', defaultRate: 41.69 },
         };
 
-        const EXPENSE_CATEGORIES = ['هدیه', 'غذا', 'تاکسی', 'مترو', 'هتل', 'سایر'];
+        const EXPENSE_CATEGORIES = ['هدیه', '🍝غذا', '🚕تاکسی', '🚇مترو', '🏨هتل', '💭سایر🎁'];
 
         // Color Palette (iOS Inspired)
         const COLORS = {
