--- a/index.html
+++ b/index.html
@@ -498,7 +498,8 @@
                 >
                     <div className="text-center text-white p-6 rounded-xl animate-pulse">
                         <h1 className="text-4xl font-extrabold mb-3 shadow-lg">
-                            ✈️ دستیار مالی</br>سفرهــــــای خارجی
+                            ✈️ دستیار مالی<br/>سفرهــــــای خارجی
+                            <br/>
                     نوشته شده با ❤️ توسط محمد صادقی کاجی
                         </h1>
                         <p className="text-xs mt-10 opacity-70">
