--- a/index.html
+++ b/index.html
@@ -498,9 +498,9 @@
                 >
                     <div className="text-center text-white p-6 rounded-xl animate-pulse">
                         <h1 className="text-4xl font-extrabold mb-3 shadow-lg">
-                            ✈️ دستیار مالی<br/>سفرهــــــای خارجی
-                            <br/>
-                    نوشته شده با ❤️ توسط محمد صادقی کاجی
+                            ✈️ دستیار مالی سفرهــــــای خارجی
+                            <p>
+                    نوشته شده با ❤️ توسط محمد صادقی کاجی</p>
                         </h1>
                         <p className="text-xs mt-10 opacity-70">
                             !! ذخیره محلی در مرورگر شما !!
